fix: partner-spacing

--- a/content/assets/css/styles.css
+++ b/content/assets/css/styles.css
@@ -1219,15 +1219,32 @@ margin-top: 4.5rem;
   opacity: 100%;
   filter: grayscale(0);
 }
-
+@media (max-width: 768px) {
+  .logo-container {
+    margin-top: 40px;
+ }
+}
 @media (max-width: 1024px) {
-  .logo-partner {
+
+  .logo-container {
+    margin-top: 50px;
+ }
+    .logo-partner {
      opacity: 100%;
      filter: none;
   }
-  
+
   .logo-partner:hover {
      opacity: 100%;
      filter: none;
+  }
+
+  .logo-partner-container {
+     margin-bottom: 20px; /* Add space between logos */
+  }
+
+  .logo-partner-container img {
+     width: 100%; 
+     max-width: 180px; /* Set a maximum width */
   }
 }
